--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,3 +1,23 @@
-<div class="side_head"></div>
-<div class="side_main"></div>
+<div class="side_head">
+  <div class="name">
+    <a href="#">Tom</a>
+  </div>
+  <div class="new_chat">
+    <a href="#">チャットを作成する</a>
+  </div>
+</div>
+
+<div class="side_main">
+  <div class="chat_room">
+    <div class="room_name">
+      <a href="#">room001</a>
+    </div>
+  </div>
+  <div class="chat_room">
+    <div class="room_name">
+      <a href="#">room002</a>
+    </div>
+  </div>
+
+</div>
 
