チャット画面のフロント実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="side_head">
-  <div class="name">
+  <div class="account_name">
     <a href="#">Tom</a>
   </div>
   <div class="new_chat">
