--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -19,7 +19,7 @@
   justify-content: space-between;
   align-items: center;
 }
-.name a{
+.account_name a{
   padding-left: 20px;
   color:#fafafa;
   font-size:16px;
@@ -55,20 +55,104 @@
   width:calc(100vw - 300px);
   background-color: #ffffff;
 }
-
+/* メインヘッド */
 .chat_head {
   height:100px;
   padding:0 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
+.current_room {
+  padding-top:36px;
+  font-size: 24px;
+  color:#333;
+}
+
+.chat_end a{
+  padding: 20px;
+  border:1px solid darkred;
+  color:darkred;
+  text-decoration: none;
+}
+
+.chat_end {
+  margin-top:40px;
+}
+
+/* メインメイン */
 .chat_main {
   height:calc(100vh - 190px);
   background-color: #fafafa;
   padding:46px 40px 0 40px;
+  overflow: scroll;
 }
 
+.messages {
+  margin-top: 10px;
+}
+
+.name_time {
+  display: flex;
+}
+
+.name {
+  font-size: 16px;
+  color:#434a54;
+  padding:0 10px 10px 0;
+}
+
+.time {
+  font-size: 12px;
+  color:#999;
+}
+
+.message {
+  font-size: 14px;
+  color:#434a54;
+  margin-bottom: 40px;
+
+}
+/* メインフット */
 .chat_foot {
   height:90px;
   background-color: #DDDDDD;
   padding:20px 40px;
+  display: flex;
+}
+.form-input {
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+
+.form-message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.form-submit {
+  background-color: #38AEF0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
