--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,3 +1,49 @@
-<div class="chat_head"></div>
-<div class="chat_main"></div>
-<div class="chat_foot"></div>
+<%# チャットヘッド %>
+<div class="chat_head">
+  <div class=current_room>
+  hogefuga
+  </div>
+  <div class=chat_end>
+    <a href="#">チャットを終了する</a>
+  </div>
+</div>
+<%# チャットメイン %>
+<div class="chat_main">
+  <div class="messages">
+    <div class=name_time>
+      <div class="name">
+        Tom
+      </div>
+      <div class="time">
+        2021/04/26 14:41:39
+      </div>
+    </div>
+    <div class="message">
+      <p>おはよう</p>
+    </div>
+  </div>  
+  <div class="messages">
+    <div class=name_time>
+      <div class="name">
+        Sim
+      </div>
+      <div class="time">
+        2021/04/26 14:45:39
+      </div>
+    </div>
+    <div class="message">
+      <p>おは</p>
+    </div>
+  </div>
+</div>
+<%# チャットフット %>
+<div class="chat_foot">
+    <div class="form-input">
+      <input class="form-message" placeholder= "type a message">
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <input type="file" class="hidden">
+      </label>
+    </div>
+    <input class="form-submit" type="submit" value="送信">
+</div>
