--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <%# チャットヘッド %>
 <div class="chat_head">
   <div class=current_room>
-  hogefuga
+    <%= @room.name %>
   </div>
   <div class=chat_end>
     <a href="#">チャットを終了する</a>
