--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -12,9 +12,12 @@
 
     </div>
   </div>
-  <div class="message">
-      <!-- 投稿したメッセージ内容を記述する -->
-      <%= message.content %>
+  <div>
+  
+    <div class="message">
+        <!-- 投稿したメッセージ内容を記述する -->
+        <%= message.content %>
+    </div>
+    <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
   </div>
-  <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
 </div>
